[tool.poetry]
name = "tsparxer"
version = "0.1.0"
description = "Lexing and Parsing TypeScript using the PLY library."
authors = [
    "Juan Antonio González <juangonz@espol.edu.ec>",
    "Paul Gudiño <pgudino@espol.edu.ec>",
    "Christopher Villa <cgvilla@espol.edu.ec>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ply = "^3.11"

[tool.poetry.scripts]
app = "tsparxer.main:main"
test = "tests.test:test"
parse = "tsparxer.util.lex_out_parser:parse"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
