[tool.poetry]
name = "tsparxer"
version = "0.1.0"
description = "Lexing and Parsing TypeScript using the PLY library."
authors = [
    "Juan Antonio González <juangonz@espol.edu.ec>",
    "Paul Gudiño <pgudino@espol.edu.ec>",
    "Christopher Villa <cgvilla@espol.edu.ec>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ply = "^3.11"

[tool.poetry.scripts]
app = "tsparxer.main:main"
test = "tests.test:test"
parse = "tsparxer.util:parse"
fmt = "lib.process_src:format"
lint = "lib.process_src:lint"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
